# gas-injector

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  cgo.go  cgo_test.go  go.mod  main.go  wrapper.go
cgo-wrapper/: wrapper.go  wrapper_test.go
cgo-wrapper/testdata/expectations/gas/: simple_host_fn.wat
libs/: libzkwasm_wasm_instrument_binding.h  libzkwasm_wasm_instrument_c_export.dylib  libzkwasm_wasm_instrument_c_export.h
packaged/include/: dammy.go  gas_injector.h
packaged/lib/: dummy.go
packaged/lib/darwin-aarch64/: libgas_injector.dylib  libzkwasm_wasm_instrument_c_export.dylib
packaged/lib/darwin-amd64/: dummy.go  libgas_injector.dylib
packaged/lib/linux-aarch64/: dummy.go
packaged/lib/linux-amd64/: dammy.go
testdata/expectations/gas/: hello_host_fn.wat  hello_host_fn_gas_only.wat  hello_host_fn_stack_first.wat  hello_host_fn_stack_only.wat
testdata/wasm/: hello2.wat
wasm-instrument-c-api/: .gitignore  Cargo.toml  Makefile  build.rs.bck
wasm-instrument-c-api/src/: gas_rules.rs  lib.rs
wasm-instrument-c-api/src/something/: file.rs
