[package]
name = "gas-injector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-instrument = "0.4.0"
wasmprinter = "0.2.48"
wat = "1.0.55"

[lib]
bench = false
crate-type = ["cdylib"]
path = "src/lib.rs"

[profile.release]
opt-level = 1
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
strip = true

[build]
target = "x86_64-unknown-linux-gnu"

[target.x86_64-unknown-linux-gnu]
linker = "/usr/local/bin/x86_64-unknown-linux-gnu-gcc"
